# file-to-luau

./: Cargo.toml  README.md
.github/workflows/: release.yml
script/: test.sh
scripts/: test.sh
src/: csv_to_luau.rs  json_to_luau.rs  main.rs  toml_to_luau.rs  xlsx_to_luau.rs  yaml_to_luau.rs
tests/input/: infrastruct.xlsx  midas.yaml  pseudo-enum.toml  rojo.json  vehicle.tsv
tests/output/: csv.luau  id-xlsx.luau  json.luau  page-xlsx.luau  toml.luau  txt.luau  yaml.luau
