[package]
name = "file_to_luau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.10", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
stylua = "0.19.1"
toml = "0.8.8"
