[package]
name = "file_to_luau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.22.1"
chrono = "0.4.31"
clap = { version = "4.4.10", features = ["derive"] }
csv = "1.3.0"
serde = "1.0.193"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
stylua = "0.19.1"
toml = "0.8.8"
