[package]
name = "file_to_luau"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.25.0"
chrono = "0.4.31"
clap = { version = "4.5.39", features = ["derive"] }
csv = "1.3.0"
serde = "1.0.193"
serde_json = "1.0.108"
serde_yaml = "0.9.34"
stylua = "2.1.0"
toml = "0.8.8"
